--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,144 @@
-/* General Styles */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Gowun+Batang:wght@400;700&display=swap');
+
+:root {
+  --nav_green: #009a3b;
+  --nav_hover: rgb(90, 139, 89);
+  --session_green: rgba(216, 227, 152, .4);
 }
 
+/* General Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Google fonts */
+.gowun-batang-regular {
+  font-family: "Gowun Batang", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+body {
+  background-color: #fff;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: SourceSansRegular, Arial, Verdana, Geneva, Tahoma, sans-serif;
+  color: #607D8B;
+}
+
+header .btn-success {
+  border-radius: 0px;
+}
+
+ /* Navbar links  */
+  .navbar-brand, .nav-link, .nav-link:hover {
+    color: var(--nav_green);
+  }
+
+  .navbar-nav .nav-link.active {
+    color: rgb(37 129 70);
+    font-weight: 600;
+  } 
+
+  .navbar-brand:hover {
+    color: var(--nav_hover);
+  }
+
+  .nav-link:hover {
+    color: var(--nav_hover);
+  }
+
+/* Hero Container */
+.hero-container {
+  position: relative;
+  height: 70vh; /* Set to 100vh for full height */
+  overflow: hidden;
+}
+
+/* Hero */
+.hero {
+  position: absolute;
+  width: 100%;
+  padding-bottom: 36.25%; /* 16:9 Aspect Ratio (9/16 = 0.5625 * 100) */
+}
+
+/* Hero Image */
+.hero img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the entire container */
+}
+
+/* Card Positioning */
+.card {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  width: 25%;
+  max-width: 400px;
+  background-color: rgba(255, 255, 255, 0.9); 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
+  padding: 15px; 
+  color: #607D8B;
+}
+
+.cooking-demo {
+  color: var(--nav_green);
+}
+
+
+h1, h2{
+    color: var(--nav_green);
+} */
+
+.first-img  {
+  border-radius: 90px 0px 90px 0px;
+}
+
+/* Left Background Colors */
+/* .left-bg-color {
+    padding: 20px; 
+  } */
+  
+  /* Full Height for Flexbox Layout */
+  /* .full-height {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 5px;
+    justify-content: center;
+  } */
+/*   
+  .full-height img {
+    border-radius: 5px;
+  } */
+
+  /* Navbar links  */
+  /* .navbar-brand, .nav-link, .nav-link:hover {
+    color: var(--nav_green);
+  } */
+
+  /* .navbar-nav .nav-link.active {
+    color: rgb(37 129 70);
+    font-weight: 600;
+  } */
+
+  /* .navbar-brand:hover {
+    color: var(--nav_hover);
+  } */
+
+  /* .nav-link:hover {
+    color: var(--nav_hover);
+  } */
+
+/* Session Videos */
+  /* .videos {
+    background-color: var(--session_green);
+    
+  } */
