--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,126 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <title>Termomix</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/css/style.css">
+  <title>Termomix</title>
 </head>
+
 <body>
-    <!-- Header -->
-    <header>
-        <div class="container-fluid">
-          <div class="d-flex p-2 justify-content-center btn btn-info">
-            <button type="button" class="btn btn-info">Get Yours TM6 - Call Now! Alina 
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward" viewBox="0 0 16 16">
-                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"/>
-              </svg>
-              <i class="bi bi-telephone-fill">07939 304191</i>
-            </button>
-          </div>
-          <div class="container">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Termomix</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">What is Thermomix</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Recipes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Buy Thermomix</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-              <section class="hero">
-                <div class="hero-content">
-                  <h2>Welcome to My Website</h2>
-                  <p>Building beautiful experiences online.</p>
-                  <a href="#about" class="button">Learn More</a>
-                </div>
-              </section>
+  <header>
+    <button type="button" class="btn btn-success w-100 ">Get Yours TM6 - Call Now! Alina
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+        class="bi bi-telephone-forward" viewBox="0 0 16 16">
+        <path
+          d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708" />
+      </svg>
+      <i class="bi bi-telephone-fill">07939 304191</i>
+    </button>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Alina's TM6</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">What is Thermomix</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Recipes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Buy Thermomix</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Request Demo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-    </header>
-
-   
-
-    <!-- About Section -->
-    <!-- <section id="about" class="about">
-        <div class="container">
-            <div class="about-content">
-                <img src="image-placeholder.jpg" alt="About Image">
-                <div class="about-text">
-                    <h2>About Us</h2>
-                    <p>We provide top-notch web design and development services.</p>
-                </div>
-            </div>
+    </div>    
+    </nav>
+    <!-- hero image -->
+    <div class="hero-container shadow">
+      <div class="hero">
+        <img src="/static/img/banner.png" alt="hero banner img" class="img-fluid">
+      </div>
+      <div class="card text-center">
+        <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-fluid" alt="buy a thermomix">
+        <div class="card-body">
+          <p class="card-text">
+            <span>
+              <a href="./demo.html" class="cooking-demo">Join Me</a>
+            </span> for a free cooking demo to find how you can <span class="cooking-demo">save time and money</span> with Thermomix®!
+          </p>
         </div>
-    </section> -->
+      </div>
+    </div>
+  </header>
+  <div class="container text-center">
+    <section>
+      <h1 class="m-5 gowun-batang-regular"  >Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
 
-    <!-- Services Section -->
-    <!-- <section id="services" class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <i class="icon-placeholder"></i>
-                    <h3>Design</h3>
-                    <p>Creative and modern design solutions.</p>
-                </div>
-                <div class="service-item">
-                    <i class="icon-placeholder"></i>
-                    <h3>Development</h3>
-                    <p>Robust and scalable web applications.</p>
-                </div>
-                <div class="service-item">
-                    <i class="icon-placeholder"></i>
-                    <h3>Marketing</h3>
-                    <p>Effective online marketing strategies.</p>
-                </div>
-            </div>
+      <p>
+        The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs. With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform, allowing you to create delicious dishes with ease.
+
+        <p>
+          Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6 empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity. 
+          <p>
+            Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the Thermomix can transform your cooking experience today!
+          </p>
+        </p>
+        
+      <!-- <div class="row">
+        <div class="col-md-6 full-height first-img">
+          <img src="/static/img/banner.jpeg" alt="Thermomix TM6 Image" class="first-img">
         </div>
-    </section> -->
-
-    <!-- Contact Section -->
-    <!-- <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <form action="#">
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your Email">
-                <textarea placeholder="Your Message"></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div> -->
+        <div class="col-md-6">
+          <h2>Experience the unrivaled versatility of the Thermomix® TM6</h2>
+          <p>
+            Thermomix TM6 is a compact all-in-one kitchen appliance. More than just a portable cooker, it functions as
+            a blender, food processor, and baking mixer, among many other tools. With over 20 advanced functions, you
+            can effortlessly chop, blend, steam, cook, stir, whisk, grind, weigh, mince, and sauté—all in one sleek
+            device.
+          </p>
+          <p>
+            The TM6 simplifies meal prep from planning to execution, transforming your kitchen experience with its
+            wide array of features, designed to help you create flawless dishes with ease.
+          </p>
+          <button type="button" class="btn btn-success">Request a Demo</button>
+        </div>
+      </div> -->
     </section>
+  </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 My Website. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+  
+  
+ <!-- Footer -->
+  <footer class="mx-auto text-center">
+    <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
 </body>
+
 </html>
+
+
+
+  <!-- <div class="container mx-auto text-center">
+    <section class="row mt-5 align-items-center">
+      
+      <div class="col-sm-6 left-bg-color full-height">
+        <h2>Experience the unrivaled versatility of the Thermomix® TM6</h2>
+        <p>
+          Thermomix TM6 is a compact all-in-one kitchen appliance. More than just a portable cooker, it functions as
+          a blender, food processor, and baking mixer, among many other tools. With over 20 advanced functions, you
+          can effortlessly chop, blend, steam, cook, stir, whisk, grind, weigh, mince, and sauté—all in one sleek
+          device.
+        </p>
+        
+          The TM6 simplifies meal prep from planning to execution, transforming your kitchen experience with its
+          wide array of features, designed to help you create flawless dishes with ease.
+        </p>
+        <button type="button" class="btn btn-success">Request a Demo</button>
+      </div>
+
+
+      <div class="col-sm-6 right-bg-color full-height">
+        <img src="/static/img/banner.jpeg" alt="Thermomix TM6 Image">
+      </div>
+    </section>
+    <section class="row mt-5 align-items-center">
+      <div class="col-md-6 right-bg-color full-height">
+        <img src="/static/img/thermomix.jpeg" alt="Thermomix TM6 Image">
+      </div>
+      <div class="col-md-6 left-bg-color full-height">
+        <p>
+          Unveil a seamless fusion of wellness, innovation, and culinary mastery with the Thermomix® TM6. First
+          launched in 1971 and continuously refined by German expertise, this all-in-one device has become a
+          favorite among home chefs across the globe. Offering more than 20 unique features within a streamlined,
+          modern design, the TM6 simplifies everything from recipe planning and grocery preparation to cooking,
+          ensuring flawless results with ease.
+        </p>
+        <button type="button" class="btn btn-success">Request a Demo</button>
+      </div>
+    </section>
+  </div>
+
+  <div class="container-fluid text-center">
+    <section class="row mt-5 align-items-center">
+      <div class="col-md-6  right-bg-color full-height">
+        <video width="682" height="533" muted controls>
+          <source src="/video/TM6 Video.mp4">
+          Your browser does not supporte the video tag.
+
+        </video>
+      </div>
+
+      <div class="col-md-6 left-bg-color full-height">
+        <p>
+          Unveil a seamless fusion of wellness, innovation, and culinary mastery with the Thermomix® TM6. First
+          launched in 1971 and continuously refined by German expertise, this all-in-one device has become a
+          favorite among home chefs across the globe. Offering more than 20 unique features within a streamlined,
+          modern design, the TM6 simplifies everything from recipe planning and grocery preparation to cooking,
+          ensuring flawless results with ease.
+        </p>
+        <button type="button" class="btn btn-success">Request a Demo</button>
+      </div>
+    </section>
+  </div> -->
