--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -12,46 +12,45 @@
 
 <body>
   <header>
-    <button type="button" class="btn btn-success w-100 ">Get Yours TM6 - Call Now! Alina
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-        class="bi bi-telephone-forward" viewBox="0 0 16 16">
-        <path
-          d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708" />
-      </svg>
-      <i class="bi bi-telephone-fill">07939 304191</i>
-    </button>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Alina's TM6</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">What is Thermomix</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Recipes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Buy Thermomix</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Request Demo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+    <div class="fixed-top">
+      <button type="button" class="btn btn-success w-100 ">Get Yours TM6 - Call Now! Alina
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward"
+          viewBox="0 0 16 16">
+          <path
+            d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708" />
+        </svg>
+        <i class="bi bi-telephone-fill">07939 304191</i>
+      </button>
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Alina's TM6</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Recipes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Buy Thermomix</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="demo.html">Book Demo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>    
-    </nav>
+      </nav>
+    </div>
     <!-- hero image -->
     <div class="hero-container shadow">
       <div class="hero">
@@ -63,123 +62,79 @@
           <p class="card-text">
             <span>
               <a href="./demo.html" class="cooking-demo">Join Me</a>
-            </span> for a free cooking demo to find how you can <span class="cooking-demo">save time and money</span> with Thermomix®!
+            </span> for a free cooking demo to find how you can <span class="cooking-demo">save time and money</span>
+            with Thermomix® TM6
           </p>
         </div>
       </div>
     </div>
   </header>
   <div class="container text-center">
-    <section>
-      <h1 class="m-5 gowun-batang-regular"  >Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
-
-      <p>
-        The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs. With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform, allowing you to create delicious dishes with ease.
-
-        <p>
-          Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6 empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity. 
-          <p>
-            Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the Thermomix can transform your cooking experience today!
-          </p>
-        </p>
-        
-      <!-- <div class="row">
-        <div class="col-md-6 full-height first-img">
-          <img src="/static/img/banner.jpeg" alt="Thermomix TM6 Image" class="first-img">
+    <section id="what_is_thermomix">
+      <h1 class="m-5 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
+      <div class="row">
+        <div class="col">
+          <img src="/static/img/banner.jpeg" class="img-design" alt="Thermomix TM6 Image">
         </div>
-        <div class="col-md-6">
-          <h2>Experience the unrivaled versatility of the Thermomix® TM6</h2>
+        <div class="col d-flex">
           <p>
-            Thermomix TM6 is a compact all-in-one kitchen appliance. More than just a portable cooker, it functions as
-            a blender, food processor, and baking mixer, among many other tools. With over 20 advanced functions, you
-            can effortlessly chop, blend, steam, cook, stir, whisk, grind, weigh, mince, and sauté—all in one sleek
-            device.
+            The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs.
+            With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this
+            versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform,
+            allowing you to create delicious dishes with ease.
           </p>
           <p>
-            The TM6 simplifies meal prep from planning to execution, transforming your kitchen experience with its
-            wide array of features, designed to help you create flawless dishes with ease.
+            Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6
+            empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
+          <p>
+          <p>
+            Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the
+            Thermomix can transform your cooking experience today!
           </p>
-          <button type="button" class="btn btn-success">Request a Demo</button>
+          <button type="button" class="btn btn-success">Book a Demo</button>
         </div>
-      </div> -->
+      </div>
+    </section>
+
+    <section id="what_comes_with_thermomix">
+      <h2 class="m-5 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
+      <div class="row">
+        <div class="col d-flex">
+          <p>
+            The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right to your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential accessories.
+          </p>
+          <p>
+            These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with lid, measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook effortlessly. 
+          </p>   
+          <p>
+            It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. 
+          <p>
+          <button type="button" class="btn btn-success">Buy - TM6</button>
+        </div>
+        <div class="col">
+          <img src="/static/img/tm-6.webp" class="img-design" alt="Thermomix TM6 Image">
+          </div>
+      </div>
     </section>
   </div>
-
-    
+  <div class="container-fluid p-0 text-center">
+    <section class="buy_thermomix">
+      <h3 class="m-5 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
+      <img src="/static/img/buy-tm-6.png" alt="buy thermomix">
+      <div class="buy_thermomix-btn">
+        <button type="button" class="btn btn-success m-3 ">Buy Now</button>
+        <button type="button" class="btn btn-success m-3">Book a Demo</button>
+      </div>
+    </section>
+  </div>
   
-  
- <!-- Footer -->
-  <footer class="mx-auto text-center">
+  <!-- Footer -->
+  <footer class="mx-auto text-center btn-success m-5">
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
-
-
-
-  <!-- <div class="container mx-auto text-center">
-    <section class="row mt-5 align-items-center">
-      
-      <div class="col-sm-6 left-bg-color full-height">
-        <h2>Experience the unrivaled versatility of the Thermomix® TM6</h2>
-        <p>
-          Thermomix TM6 is a compact all-in-one kitchen appliance. More than just a portable cooker, it functions as
-          a blender, food processor, and baking mixer, among many other tools. With over 20 advanced functions, you
-          can effortlessly chop, blend, steam, cook, stir, whisk, grind, weigh, mince, and sauté—all in one sleek
-          device.
-        </p>
-        
-          The TM6 simplifies meal prep from planning to execution, transforming your kitchen experience with its
-          wide array of features, designed to help you create flawless dishes with ease.
-        </p>
-        <button type="button" class="btn btn-success">Request a Demo</button>
-      </div>
-
-
-      <div class="col-sm-6 right-bg-color full-height">
-        <img src="/static/img/banner.jpeg" alt="Thermomix TM6 Image">
-      </div>
-    </section>
-    <section class="row mt-5 align-items-center">
-      <div class="col-md-6 right-bg-color full-height">
-        <img src="/static/img/thermomix.jpeg" alt="Thermomix TM6 Image">
-      </div>
-      <div class="col-md-6 left-bg-color full-height">
-        <p>
-          Unveil a seamless fusion of wellness, innovation, and culinary mastery with the Thermomix® TM6. First
-          launched in 1971 and continuously refined by German expertise, this all-in-one device has become a
-          favorite among home chefs across the globe. Offering more than 20 unique features within a streamlined,
-          modern design, the TM6 simplifies everything from recipe planning and grocery preparation to cooking,
-          ensuring flawless results with ease.
-        </p>
-        <button type="button" class="btn btn-success">Request a Demo</button>
-      </div>
-    </section>
-  </div>
-
-  <div class="container-fluid text-center">
-    <section class="row mt-5 align-items-center">
-      <div class="col-md-6  right-bg-color full-height">
-        <video width="682" height="533" muted controls>
-          <source src="/video/TM6 Video.mp4">
-          Your browser does not supporte the video tag.
-
-        </video>
-      </div>
-
-      <div class="col-md-6 left-bg-color full-height">
-        <p>
-          Unveil a seamless fusion of wellness, innovation, and culinary mastery with the Thermomix® TM6. First
-          launched in 1971 and continuously refined by German expertise, this all-in-one device has become a
-          favorite among home chefs across the globe. Offering more than 20 unique features within a streamlined,
-          modern design, the TM6 simplifies everything from recipe planning and grocery preparation to cooking,
-          ensuring flawless results with ease.
-        </p>
-        <button type="button" class="btn btn-success">Request a Demo</button>
-      </div>
-    </section>
-  </div> -->
