--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,12 @@ header .btn-success {
     color: var(--nav_green);
   }
 
+  .navbar-brand img {
+      max-height: 55px; 
+      height: auto;     /* Maintain aspect ratio */
+      width: auto;      /* Optional to prevent width distortion */
+    }
+  
   .navbar-nav .nav-link.active {
     color: rgb(37 129 70);
     font-weight: 600;
@@ -59,35 +65,48 @@ header .btn-success {
 /* Hero Container */
 .hero-container {
   position: relative;
-  height: 70vh; /* Set to 100vh for full height */
+  height: 100vh; /* Set to 100vh for full height */
   overflow: hidden;
 }
 
 /* Hero */
 .hero {
   position: absolute;
-  width: 100%;
-  padding-bottom: 36.25%; /* 16:9 Aspect Ratio (9/16 = 0.5625 * 100) */
+  width: 100vw;
+  padding-bottom: 36.25%; /*  16:9 Aspect Ratio (9/16 = 0.5625 * 100)  */
+  height: 100vh;
 }
 
 /* Hero Image */
 .hero img {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  object-fit: cover; /* Ensures the image covers the entire container */
-  max-height: 600px;
+  height: 100vh;
+  object-fit: cover;
+  /* object-position: 17% top; */
+}
+
+.hero-heading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  font-family: serif;
+  color: white;
+  background-color: #76594261;
+  border-radius: 10px;
 }
 
 /* Card Positioning */
 .card {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 80%;
   transform: translate(-50%, -50%);
-  width: 25%;
+  width: 25vw;
   max-width: 400px;
+  height: auto;
   background-color: rgba(255, 255, 255, 0.9); 
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
   padding: 15px; 
@@ -97,7 +116,7 @@ header .btn-success {
 .img-design {
   background-color: rgba(255, 255, 255, 0.9); 
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
-  padding: 15px; 
+  padding: 2px; 
   border-radius: 5px;
   max-width: 600px;
 }
@@ -109,21 +128,20 @@ header .btn-success {
 
 h1, h2, h3{
     color: var(--nav_green);
-} */
-
-.left-img  {
-  border-radius: 90px 0px 90px 0px;
 }
 
 .d-flex {
-  display: flex !important;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .buy_thermomix {
+  position: relative;
+}
+
+/* position the btns in the center of the image */
+.buy_thermomix-img { 
   position: relative;
 }
 
@@ -139,6 +157,46 @@ h1, h2, h3{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* Footer */
+footer {
+  background-color: var(--nav_green);
+  color: white;
+  padding: 20px;
+  font-size: 0.9rem;
+  color: #fff;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.footer-links {
+  margin-top: 1.5rem
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 2%;
+}
+
+.container, .row, .col {
+  max-width: 100%;
+  padding: 15px;
+  margin: 0 auto;
 }
 
 
@@ -184,3 +242,10 @@ h1, h2, h3{
     background-color: var(--session_green);
     
   } */
+
+  @media (max-width: 768px) {
+    .card {
+      width: 80vw; /* Wider on smaller screens */
+      top: 45%; /* Adjust top position */
+    }
+  }
