--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,7 +38,11 @@ header .btn-success {
   border-radius: 0px;
 }
 
- /* Navbar links  */
+ /* Navbar  */
+.navbar {
+  border-top: 8px solid var(--nav_green);
+}
+
   .navbar-brand, .nav-link, .nav-link:hover {
     color: var(--nav_green);
   }
@@ -96,6 +100,7 @@ header .btn-success {
   color: white;
   background-color: #76594261;
   border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Card Positioning */
@@ -115,8 +120,7 @@ header .btn-success {
 
 .img-design {
   background-color: rgba(255, 255, 255, 0.9); 
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
-  padding: 2px; 
+  box-shadow: 4px 5px 20px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   max-width: 600px;
 }
