Removed contact from top nav

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -13,12 +13,7 @@
 
 <body>
   <header>
-    <div class="fixed-top">
-      <button type="button" class="btn btn-success w-100 ">
-        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
-        </a>
-      </button>
+    
 
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -51,7 +46,7 @@
           </div>
         </div>
       </nav>
-    </div>
+    
     <!-- hero image -->
     <div class="hero-container shadow">
       <div class="hero">
@@ -98,7 +93,9 @@
             Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the
             Thermomix can transform your cooking experience today!
           </p>
-          <button type="button" class="btn btn-success">Book a Demo</button>
+          <a href="demo.html">
+            <button type="button" class="btn btn-success">Book a Demo</button>
+          </a>
         </div>
       </div>
     </section>
