--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,7 +104,7 @@ header .btn-success {
 }
 
 /* Card Positioning */
-.card {
+/* .card {
   position: absolute;
   top: 60%;
   left: 80%;
@@ -116,7 +116,7 @@ header .btn-success {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
   padding: 15px; 
   color: #607D8B;
-}
+} */
 
 .img-design {
   background-color: rgba(255, 255, 255, 0.9); 
@@ -128,6 +128,7 @@ header .btn-success {
 
 .cooking-demo {
   color: var(--nav_green);
+  text-decoration: none;
 }
 
 h1, h2, h3{
@@ -203,7 +204,24 @@ footer a:hover {
   margin: 0 auto;
 }
 
+/* Book Demo CSS */
+.card-title {
+  color: var(--nav_green);
+}
 
+.card-book-demo {
+  max-width: 80vw;
+  top: -150px;
+  border-radius: 50px;
+  text-wrap: balance;
+  border: 0;
+  background: #f8f9fa;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.form-control::placeholder {
+  opacity: .6;
+}
 
 
 /* Left Background Colors */
@@ -250,6 +268,6 @@ footer a:hover {
   @media (max-width: 768px) {
     .card {
       width: 80vw; /* Wider on smaller screens */
-      top: 45%; /* Adjust top position */
+      top: -40vw /* Adjust top position */
     }
   }
