wrapping the content in a main-container

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -13,8 +13,6 @@
 
 <body>
   <header>
-    
-
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -71,68 +69,73 @@
       </div> -->
     </div>
   </header>
-  <div class="container text-center">
-    <section id="what_is_thermomix">
-      <h1 class="m-3 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
-      <div class="row">
-        <div class="col">
-          <img src="/static/img/alina.jpeg" class="img-design img-fluid" alt="Thermomix TM6 Image">
-        </div>
-        <div class="col-md-6 d-flex">
-          <p>
-            The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs.
-            With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this
-            versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform,
-            allowing you to create delicious dishes with ease.
-          </p>
-          <p>
-            Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6
-            empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
-          <p>
-          <p>
-            Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the
-            Thermomix can transform your cooking experience today!
-          </p>
-          <a href="demo.html">
-            <button type="button" class="btn btn-success">Book a Demo</button>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <section id="what_comes_with_thermomix">
-      <h2 class="m-3 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
-      <div class="row">
-        <div class="col-md-6 d-flex">
-          <p>
-            The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right to your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential accessories.
-          </p>
-          <p>
-            These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with lid, measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook effortlessly. 
-          </p>   
-          <p>
-            It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. <br>
-            <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
-          <p>
-          <button type="button" class="btn btn-success">Buy - TM6</button>
-        </div>
-        <div class="col-md-6">
-          <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
+  <div class="main-container">
+    <div class="container text-center">
+      <section id="what_is_thermomix">
+        <h1 class="m-3 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
+        <div class="row">
+          <div class="col">
+            <img src="/static/img/alina.jpeg" class="img-design img-fluid" alt="Thermomix TM6 Image">
           </div>
-      </div>
-    </section>
-  </div>
-  <div class="container-fluid p-0 text-center">
-    <section class="buy_thermomix">
-      <h3 class="m-3 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
-      <div class="buy_thermomix-img">
-        <img src="/static/img/buy-tm-6.png" class="img-fluid" alt="buy thermomix">
-        <div class="buy_thermomix-btn">
-          <button type="button" class="btn btn-success m-3 ">Buy Now</button>
-          <button type="button" class="btn btn-success m-3">Book a Demo</button>
+          <div class="col-md-6 d-flex">
+            <p>
+              The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs.
+              With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this
+              versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform,
+              allowing you to create delicious dishes with ease.
+            </p>
+            <p>
+              Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6
+              empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
+            <p>
+            <p>
+              Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the
+              Thermomix can transform your cooking experience today!
+            </p>
+            <a href="demo.html">
+              <button type="button" class="btn btn-success">Book a Demo</button>
+            </a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+
+      <section id="what_comes_with_thermomix">
+        <h2 class="m-3 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <p>
+              The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right to your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential accessories.
+            </p>
+            <p>
+              These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with lid, measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook effortlessly. 
+            </p>   
+            <p>
+              It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. <br>
+              <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
+            <p>
+            <button type="button" class="btn btn-success">Buy - TM6</button>
+          </div>
+          <div class="col-md-6">
+            <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
+            </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid p-0 text-center">
+      <section class="buy_thermomix m-5">
+        <h3 class="m-3 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
+        <p>
+          Unlock the full potential of your kitchen with the ultimate all-in-one solution, Thermomix®. This versatile device transforms your culinary experience, combining multiple kitchen tools into one intelligent assistant. From chopping and blending to precise cooking, Thermomix® streamlines meal prep, allowing you to create wholesome, restaurant-quality dishes effortlessly. Whether you’re exploring new flavors or simplifying everyday meals, it adapts to your needs, saving you time, reducing clutter, and enhancing creativity. Let Thermomix® empower your kitchen, so you can cook smarter, not harder!
+        </p>
+        <div class="buy_thermomix-img">
+          <img src="/static/img/buy-tm-6.png" class="img-fluid" alt="buy thermomix">
+          <div class="buy_thermomix-btn">
+            <button type="button" class="btn btn-success m-3 ">Buy Now</button>
+            <button type="button" class="btn btn-success m-3">Book a Demo</button>
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
   
   <!-- Footer -->
