--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -29,13 +29,13 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Buy Thermomix</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="demo.html">Book Demo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Recipes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -56,17 +56,6 @@
         </span>
         <button type="button" class="btn btn-success m-3">Book a Demo</button>
       </div>
-      <!-- <div class="card text-center">
-        <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-fluid" alt="buy a thermomix">
-        <div class="card-body">
-          <p class="card-text">
-            <span>
-              <a href="./demo.html" class="cooking-demo">Join Me</a>
-            </span> for a free cooking demo to find how you can <span class="cooking-demo">save time and money</span>
-            with Thermomix® TM6
-          </p>
-        </div>
-      </div> -->
     </div>
   </header>
   <div class="main-container">
