Adding icons for the how it work section

--- a/static/templates/buy_thermomix.html
+++ b/static/templates/buy_thermomix.html
@@ -120,21 +120,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4>Full Payment</h4>
-                    <span class="circle m-3">1</span>
+                    <img src="/static/img/payment-method.png" class="m-3" alt="full payment method logo">
                     <p>
                         Full Payment: Pay £1,279 upfront via debit or credit card (Mastercard or Visa). Includes free 3-year extended warranty.
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Earn a Free Thermomix</h4>
-                    <span class="circle m-3">2</span>
+                    <img src="/static/img/earn-for-free.png" class="m-3" alt="earm for free logo">
                     <p>
                         Want to earn a Thermomix®? Join as an advisor, sell two units in 30 days, and get your own Thermomix® without paying a penny!
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Finance Plan</h4>
-                    <span class="circle m-3">3</span>
+                    <img src="/static/img/finance-plan.png" class="m-3" alt="finance logo">
                     <p>
                         Finance Plans: Choose Novuna Finance with 12, 24, 36, or 48 months options (14.9% APR). Monthly payments start from £61.39.
                     </p>
