Additional div to separate btns at buy tm6 sectionm

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -54,7 +54,9 @@
         <span>The world's smallest, smartest kitchen - 
           Thermomix® TM6
         </span>
-        <button type="button" class="btn btn-success m-3">Book a Demo</button>
+        <a href="demo.html">
+          <button type="button" class="btn btn-success m-3">Book a Demo</button>
+        </a>
       </div>
     </div>
   </header>
@@ -102,7 +104,9 @@
               It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. <br>
               <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
             <p>
-            <button type="button" class="btn btn-success">Buy - TM6</button>
+              <a href="buy_thermomix.html">
+                <button type="button" class="btn btn-success">Buy - TM6</button>
+              </a>
           </div>
           <div class="col-md-6">
             <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
@@ -119,8 +123,16 @@
         <div class="buy_thermomix-img">
           <img src="/static/img/buy-tm-6.png" class="img-fluid" alt="buy thermomix">
           <div class="buy_thermomix-btn">
-            <button type="button" class="btn btn-success m-3 ">Buy Now</button>
-            <button type="button" class="btn btn-success m-3">Book a Demo</button>
+            <div>
+              <a href="buy_thermomix.html">
+                <button type="button" class="btn btn-success m-3">Buy - TM6</button>
+              </a>
+            </div>
+            <div>
+              <a href="demo.html">
+                <button type="button" class="btn btn-success m-3">Book a Demo</button>
+              </a>
+            </div>
           </div>
         </div>
       </section>
