Replaced numbers for Icons on Demo page

--- a/static/templates/buy_thermomix.html
+++ b/static/templates/buy_thermomix.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4>Earn a Free Thermomix</h4>
-                    <img src="/static/img/earn-for-free.png" class="m-3" alt="earm for free logo">
+                    <img src="/static/img/earn_icon.png" class="m-3" alt="earm for free icon">
                     <p>
                         Want to earn a Thermomix®? Join as an advisor, sell two units in 30 days, and get your own Thermomix® without paying a penny!
                     </p>
