--- a/static/templates/demo.html
+++ b/static/templates/demo.html
@@ -81,7 +81,7 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-design" alt="card image">
+                            <img src="/static/img/book_demo.jpeg" class="card-img-top img-design" alt="book a demo image">
                         </div>
 
                         <!-- Book a demo Form -->
@@ -115,21 +115,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4>Schedule a Cooking Demo</h4>
-                    <span class="circle m-3">1</span>
+                    <img src="/static/img/shedule_icon.png" class="m-3" alt="schedule icon">
                     <p>
                         Begin your Thermomix® journey by scheduling a one-on-one cooking demonstration with me. The experience is tailored to your unique cooking habits and preferences. When you request a demo, you can share how many people you typically cook for, the types of meals you enjoy preparing, and any specific features you’re eager to see in action. I will send you a menu in advance, so you can select the recipes that best align with your tastes, ensuring the demo is personalized just for you.
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Discover it in Action</h4>
-                    <span class="circle m-3">2</span>
+                    <img src="/static/img/discover_icon.png" class="m-3" alt="discover icon">
                     <p>
                         During your personalized cooking demo, experience firsthand how versatile the Thermomix® is. You’ll see how effortlessly it chops, blends, kneads, and cooks, showcasing its full range of features. Try out different functions, I will also help you prepare dishes such as risotto, soups, bread, and more. Have questions? Feel free to ask! It’s your time to learn and understand how the Thermomix® can fit into your everyday kitchen routine.
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Decide at Your Own Pace</h4>
-                    <span class="circle m-3">3</span>
+                    <img src="/static/img/selection_icon.png" class="m-3" alt="selection icon">
                     <p>
                         After the demo, if you're impressed with what the Thermomix® has to offer, I will guide you through the ordering process, detailing all the available payment options. Whether you choose to purchase right away or need time to think it over, I will remain available to answer any additional questions. You can even schedule another demo to see more features in action before making a final decision. It's all about ensuring that you make the best choice for your kitchen!
                     </p>
