Adding a Video to home page and replacing imgs

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -43,14 +43,12 @@
       </nav>
     
     <!-- hero image -->
-    <div class="hero-container shadow">
+    <div class="hero-container">
       <div class="hero">
         <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
-        <span>The world's smallest, smartest kitchen - 
-          Thermomix® TM6
-        </span>
+        <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
         <a href="demo.html">
           <button type="button" class="btn btn-success m-3">Book a Demo</button>
         </a>
@@ -86,7 +84,7 @@
           </div>
         </div>
       </section>
-
+      <!--Section what comes with thermomix  -->
       <section id="what_comes_with_thermomix">
         <h2 class="m-3 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
         <div class="row">
@@ -118,7 +116,10 @@
           Unlock the full potential of your kitchen with the ultimate all-in-one solution, Thermomix®. This versatile device transforms your culinary experience, combining multiple kitchen tools into one intelligent assistant. From chopping and blending to precise cooking, Thermomix® streamlines meal prep, allowing you to create wholesome, restaurant-quality dishes effortlessly. Whether you’re exploring new flavors or simplifying everyday meals, it adapts to your needs, saving you time, reducing clutter, and enhancing creativity. Let Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-          <img src="/static/img/buy-tm-6.png" class="img-fluid" alt="buy thermomix">
+           <video controls class="img-fluid">
+              <source src="/static/video/TM6-video.mp4">
+              Your browser does not support the vide tag.
+           </video>
           <div class="buy_thermomix-btn">
             <div>
               <a href="buy_thermomix.html">
@@ -154,9 +155,9 @@
     </section>
     
     <div class="footer-links">
-      <a href="/recipes.html">Recipes</a> | 
-      <a href="/buy.html">Buy Thermomix</a> | 
-      <a href="/demo.html">Book a Demo</a>
+      <a href="demo.html">Book Demo</a>  |
+      <a href="buy_thermomix.html">Buy Thermomix</a> | 
+      <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
