--- a/static/templates/buy_thermomix.html
+++ b/static/templates/buy_thermomix.html
@@ -14,51 +14,50 @@
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="/static/img/logo.png" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="demo.html">Book Demo</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/static/img/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="demo.html">Book Demo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
         </nav>
-    
+
         <!-- hero image -->
-        <div class="hero-container shadow">
-          <div class="hero">
-            <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
-          </div>
-          <div class="d-flex text-center hero-heading">
-            <span>The world's smallest, smartest kitchen -
-              Thermomix® TM6
-            </span>
-            <a href="demo.html">
-              <button type="button" class="btn btn-success m-3">Book a Demo</button>
-            </a>
-          </div>
+        <div class="hero-container">
+            <div class="hero">
+                <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+            </div>
+            <div class="d-flex text-center hero-heading">
+                <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
+                <a href="demo.html">
+                    <button type="button" class="btn btn-success m-3">Book a Demo</button>
+                </a>
+            </div>
         </div>
-      </header>
+    </header>
     <div class="main-container">
-        <section class="book-demo">
-            <div class="card card-book-demo mx-auto">
+        <section class="buy-thermoxix">
+            <div class="card card-top mx-auto">
                 <h1 class="card-title m-3 gowun-batang-regular text-center">How to buy Thermomix</h1>
                 <div class="card-body">
                     <div class="row">
@@ -88,13 +87,14 @@
                             </ul>
                         </div>
                         <div class="col-md-6">
-                            <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-design" alt="card image">
+                            <img src="/static/img/buy-tm6.jpg" class="card-img-top img-design img-fluid"
+                                alt="card image">
                         </div>
 
                         <!-- Book a demo Form -->
-                        <form action="book_demo">
+                        <form action="book_demo" class="mt-5">
                             <div class="row">
-                                <div class="form-group col-md-6">
+                                <div class="form-group col-md-6 mb-3">
                                     <input type="text" class="form-control" placeholder="First name"
                                         aria-label="First name">
                                 </div>
@@ -125,23 +125,26 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4>Full Payment</h4>
-                    <img src="/static/img/payment-method.png" class="m-3" alt="full payment method logo">
+                    <img src="/static/img/icons/payment-icon.png" class="m-3" alt="full payment method logo">
                     <p>
-                        Full Payment: Pay £1,279 upfront via debit or credit card (Mastercard or Visa). Includes free 3-year extended warranty.
+                        Full Payment: Pay £1,279 upfront via debit or credit card (Mastercard or Visa). Includes free
+                        3-year extended warranty.
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Earn a Free Thermomix</h4>
-                    <img src="/static/img/earn_icon.png" class="m-3" alt="earm for free icon">
+                    <img src="/static/img/icons/earn-icon.png" class="m-3" alt="earm for free icon">
                     <p>
-                        Want to earn a Thermomix®? Join as an advisor, sell two units in 30 days, and get your own Thermomix® without paying a penny!
+                        Want to earn a Thermomix®? Join as an advisor, sell two units in 30 days, and get your own
+                        Thermomix® without paying a penny!
                     </p>
                 </div>
                 <div class="col-md-4">
                     <h4>Finance Plan</h4>
-                    <img src="/static/img/finance-plan.png" class="m-3" alt="finance logo">
+                    <img src="/static/img/icons//finance-icon.png" class="m-3" alt="finance logo">
                     <p>
-                        Finance Plans: Choose Novuna Finance with 12, 24, 36, or 48 months options (14.9% APR). Monthly payments start from £61.39.
+                        Finance Plans: Choose Novuna Finance with 12, 24, 36, or 48 months options (14.9% APR). Monthly
+                        payments start from £61.39.
                     </p>
                 </div>
             </div>
@@ -151,24 +154,35 @@
             <h3 class="pt-4">Additional Benefits</h3>
             <div class="row">
                 <div class="col-md-4">
-                    <strong>After-Sales Support:</strong>   My service doesn’t stop at purchase. As your dedicated advisor, you’ll receive lifetime support, free cooking classes, and guidance to help you make the most of your Thermomix®. <br>
-                </div>
-                <div class="col-md-4">                
-                    <strong>Cookidoo® Subscription:</strong>   With every Thermomix® purchase, you’ll receive a free 6-month subscription to Cookidoo®, the ultimate recipe platform to inspire your culinary creativity. <br>
+                    <strong>After-Sales Support:</strong> My service doesn’t stop at purchase. As your dedicated
+                    advisor, you’ll receive lifetime support, free cooking classes, and guidance to help you make the
+                    most of your Thermomix®. <br>
                 </div>
                 <div class="col-md-4">
-                    <strong>Peace of Mind:</strong>   All Thermomix® appliances come with a standard 2-year warranty for personal use (1 year for commercial use). You can also extend the warranty to 5 years for additional peace of mind. <br>
+                    <strong>Cookidoo® Subscription:</strong> With every Thermomix® purchase, you’ll receive a free
+                    6-month subscription to Cookidoo®, the ultimate recipe platform to inspire your culinary creativity.
+                    <br>
+                </div>
+                <div class="col-md-4">
+                    <strong>Peace of Mind:</strong> All Thermomix® appliances come with a standard 2-year warranty for
+                    personal use (1 year for commercial use). You can also extend the warranty to 5 years for additional
+                    peace of mind. <br>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <strong>Risk-Free Trial:</strong>   Unsure if Thermomix® is for you? Benefit from a 14-day money-back guarantee, giving you the flexibility to try it and return it if it doesn’t fit your needs. <br>
+                    <strong>Risk-Free Trial:</strong> Unsure if Thermomix® is for you? Benefit from a 14-day money-back
+                    guarantee, giving you the flexibility to try it and return it if it doesn’t fit your needs. <br>
                 </div>
                 <div class="col-md-4">
-                    <strong>Add-On Accessories: </strong>   Boost your Thermomix® functionality with essential accessories like the blade cover or the new blade cover peeler, perfect for sous-vide or slow-cooked dishes. <br>
+                    <strong>Add-On Accessories: </strong> Boost your Thermomix® functionality with essential accessories
+                    like the blade cover or the new blade cover peeler, perfect for sous-vide or slow-cooked dishes.
+                    <br>
                 </div>
                 <div class="col-md-4">
-                    <strong>Exclusive Offers: </strong>   The Thermomix® is available only through me as your authorized Advisor. While the price is fixed, you’ll enjoy exclusive bundle deals and valuable add-ons during special promotions, enhancing your experience.
+                    <strong>Exclusive Offers: </strong> The Thermomix® is available only through me as your authorized
+                    Advisor. While the price is fixed, you’ll enjoy exclusive bundle deals and valuable add-ons during
+                    special promotions, enhancing your experience.
                 </div>
             </div>
         </section>
@@ -192,9 +206,9 @@
         </section>
         <!-- Footter links  -->
         <div class="footer-links">
-            <a href="/recipes.html">Recipes</a> |
-            <a href="/buy.html">Buy Thermomix</a> |
-            <a href="/demo.html">Book a Demo</a>
+            <a href="index.html">Home</a> |
+            <a href="demo.html">Book a Demo</a> |
+            <a href="contact.html">Contact</a>
         </div>
         <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
     </footer>
