--- a/static/templates/contact.html
+++ b/static/templates/contact.html
@@ -43,14 +43,12 @@
     </nav>
 
     <!-- hero image -->
-    <div class="hero-container shadow">
+    <div class="hero-container">
       <div class="hero">
         <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
-        <span>The world's smallest, smartest kitchen -
-          Thermomix® TM6
-        </span>
+        <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
         <a href="demo.html">
           <button type="button" class="btn btn-success m-3">Book a Demo</button>
         </a>
@@ -59,8 +57,8 @@
   </header>
   <div class="main-container">
     <section class="book-demo">
-      <div class="card card-book-demo mx-auto text-center">
-        <h1 class="card-title m-3 gowun-batang-regular">Get in Touch</h1>
+      <div class="card card-top mx-auto text-center">
+        <h1 class="card-title m-3 gowun-batang-regular">Your Thermomix Experience Starts Here </h1>
         <div class="card-body">
           <div class="row">
             <div class="col-md-6 d-flex">
@@ -78,9 +76,12 @@
               </p>
             </div>
             <div class="col-md-6">
-              <form action="book_demo">
+              <img src="/static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
+            </div>
+            <div class="container-fluid">
+              <form action="book_demo" class="mt-5">
                 <div class="row">
-                  <div class="form-group col-md-6">
+                  <div class="form-group col-md-6  col-sm-12 mb-3">
                     <input type="text" class="form-control" placeholder="First Name" aria-label="First Name" required>
                   </div>
                   <div class="form-group col-md-6 mb-3">
@@ -95,7 +96,7 @@
                   <div class="mb-3">
                     <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
                       required>
-                      </textarea>
+                    </textarea>
                   </div>
                   <div>
                     <button type="submit" class="btn btn-success">Submit</button>
@@ -127,9 +128,9 @@
     </section>
 
     <div class="footer-links">
-      <a href="/recipes.html">Recipes</a> |
-      <a href="/buy.html">Buy Thermomix</a> |
-      <a href="/demo.html">Book a Demo</a>
+      <a href="index.html">Home</a> |
+      <a href="demo.html">Book a Demo</a> |
+      <a href="buy_thermomix.html">Buy Thermomix</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
