--- a/static/templates/demo.html
+++ b/static/templates/demo.html
@@ -2,153 +2,167 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <title>Book a Thermomix Cooking Demo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/css/style.css">
+  <title>Book a Thermomix Cooking Demo</title>
 </head>
 
 <body>
-    <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="/static/img/logo.png" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="demo.html">Book Demo</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/static/img/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="demo.html">Book Demo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- hero image -->
+    <div class="hero-container">
+      <div class="hero">
+        <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+      </div>
+      <div class="d-flex text-center hero-heading">
+        <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
+        <a href="demo.html">
+          <button type="button" class="btn btn-success m-3">Book a Demo</button>
+        </a>
+      </div>
+    </div>
+  </header>
+  <div class="main-container">
+    <section class="book-demo">
+      <div class="card card-top mx-auto text-center">
+        <h1 class="card-title m-3 gowun-batang-regular">Book a Demo</h1>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-6 d-flex">
+              <p>
+                <em>Having a <b>Thermomix® Advisor</b> means you’re not just buying a kitchen appliance; you’re
+                  gaining
+                  a
+                  dedicated
+                  support partner.</em>
+              <p>I’ll assist you from the moment you purchase your TM6, guiding you on how to use it
+                effectively, helping you navigate the <a href="https://cookidoo.co.uk/foundation/en-GB"
+                  class="cooking-demo" target="_blank">Cookidoo Recipe Platform</a>, and inviting you to
+                exclusive
+                cooking
+                classes.
+              </p>
+              <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
+                investment and enjoy a rewarding culinary journey! <br><br>
+
+                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and
+                discover how
+                the
+                Thermomix can transform your cooking experience today!</p>
+              </p>
             </div>
-          </div>
-        </nav>
-    
-        <!-- hero image -->
-        <div class="hero-container shadow">
-          <div class="hero">
-            <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
-          </div>
-          <div class="d-flex text-center hero-heading">
-            <span>The world's smallest, smartest kitchen -
-              Thermomix® TM6
-            </span>
-            <a href="demo.html">
-              <button type="button" class="btn btn-success m-3">Book a Demo</button>
-            </a>
+            <div class="col-md-6">
+              <img src="/static/img/book-demo.jpeg" class="card-img-top img-design" alt="book a demo image">
+            </div>
+
+            <!-- Book a demo Form -->
+            <form action="book_demo" class="mt-5">
+              <div class="row">
+                <div class="form-group col-md-6 mb-3">
+                  <input type="text" class="form-control" placeholder="First Name" aria-label="First Name" required>
+                </div>
+                <div class="form-group col-md-6 mb-3">
+                  <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" required>
+                </div>
+                <div class="form-group col-md-6 mb-3">
+                  <input type="text" class="form-control" id="phoneNumber" placeholder="Contact Number" required>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <input type="email" class="form-control" id="formControlInput" placeholder="Email" required>
+                </div>
+                <div class="mb-3">
+                  <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
+                    required>
+                  </textarea>
+                </div>
+                <div>
+                  <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-      </header>
-    <div class="main-container">
-        <section class="book-demo">
-            <div class="card card-book-demo mx-auto text-center">
-                <h1 class="card-title m-3 gowun-batang-regular">Book a Demo</h1>
-                <div class="card-body">
-                        <div class="row">
-                        <div class="col-md-6 d-flex">
-                            <p>
-                                <em>Having a <b>Thermomix® Advisor</b> means you’re not just buying a kitchen appliance; you’re
-                                    gaining
-                                    a
-                                    dedicated
-                                    support partner.</em>
-                            <p>I’ll assist you from the moment you purchase your TM6, guiding you on how to use it
-                                effectively, helping you navigate the <a href="https://cookidoo.co.uk/foundation/en-GB"
-                                    class="cooking-demo" target="_blank">Cookidoo Recipe Platform</a>, and inviting you to
-                                exclusive
-                                cooking
-                                classes.
-                            </p>
-                            <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
-                                investment and enjoy a rewarding culinary journey! <br><br>
+      </div>
+    </section>
+    <!-- Section how it works -->
+    <section class="how_it_works text-center">
+      <h2 class="m-3">How it Works</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <h4>Schedule a Cooking Demo</h4>
+          <img src="/static/img/icons/shedule-icon.png" class="m-3" alt="schedule icon">
+          <p>
+            Begin your Thermomix® journey by scheduling a one-on-one cooking demonstration with me. The experience is
+            tailored to your unique cooking habits and preferences. When you request a demo, you can share how many
+            people you typically cook for, the types of meals you enjoy preparing, and any specific features you’re
+            eager to see in action. I will send you a menu in advance, so you can select the recipes that best align
+            with your tastes, ensuring the demo is personalized just for you.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4>Discover it in Action</h4>
+          <img src="/static/img/icons/discover_icon.png" class="m-3" alt="discover icon">
+          <p>
+            During your personalized cooking demo, experience firsthand how versatile the Thermomix® is. You’ll see how
+            effortlessly it chops, blends, kneads, and cooks, showcasing its full range of features. Try out different
+            functions, I will also help you prepare dishes such as risotto, soups, bread, and more. Have questions? Feel
+            free to ask! It’s your time to learn and understand how the Thermomix® can fit into your everyday kitchen
+            routine.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h4>Decide at Your Own Pace</h4>
+          <img src="/static/img/icons/selection-icon.png" class="m-3" alt="selection icon">
+          <p>
+            After the demo, if you're impressed with what the Thermomix® has to offer, I will guide you through the
+            ordering process, detailing all the available payment options. Whether you choose to purchase right away or
+            need time to think it over, I will remain available to answer any additional questions. You can even
+            schedule another demo to see more features in action before making a final decision. It's all about ensuring
+            that you make the best choice for your kitchen!
+          </p>
+        </div>
+      </div>
+    </section>
+  </div>
 
-                                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and
-                                discover how
-                                the
-                                Thermomix can transform your cooking experience today!</p>
-                            </p>
-                        </div>
-                        <div class="col-md-6">
-                            <img src="/static/img/book_demo.jpeg" class="card-img-top img-design" alt="book a demo image">
-                        </div>
-
-                        <!-- Book a demo Form -->
-                        <form action="book_demo">
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-                                </div>
-                                <div class="form-group col-md-6 mb-3">
-                                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-                                </div>
-                                <div class="mb-3">
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
-                                </div>
-                                <div class="mb-3">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
-                                        placeholder="Leave a message..."></textarea>
-                                </div>
-                                <div>
-                                    <button type="submit" class="btn btn-success">Submit</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Section how it works -->
-        <section class="how_it_works text-center">
-            <h2 class="m-3">How it Works</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h4>Schedule a Cooking Demo</h4>
-                    <img src="/static/img/shedule_icon.png" class="m-3" alt="schedule icon">
-                    <p>
-                        Begin your Thermomix® journey by scheduling a one-on-one cooking demonstration with me. The experience is tailored to your unique cooking habits and preferences. When you request a demo, you can share how many people you typically cook for, the types of meals you enjoy preparing, and any specific features you’re eager to see in action. I will send you a menu in advance, so you can select the recipes that best align with your tastes, ensuring the demo is personalized just for you.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Discover it in Action</h4>
-                    <img src="/static/img/discover_icon.png" class="m-3" alt="discover icon">
-                    <p>
-                        During your personalized cooking demo, experience firsthand how versatile the Thermomix® is. You’ll see how effortlessly it chops, blends, kneads, and cooks, showcasing its full range of features. Try out different functions, I will also help you prepare dishes such as risotto, soups, bread, and more. Have questions? Feel free to ask! It’s your time to learn and understand how the Thermomix® can fit into your everyday kitchen routine.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Decide at Your Own Pace</h4>
-                    <img src="/static/img/selection_icon.png" class="m-3" alt="selection icon">
-                    <p>
-                        After the demo, if you're impressed with what the Thermomix® has to offer, I will guide you through the ordering process, detailing all the available payment options. Whether you choose to purchase right away or need time to think it over, I will remain available to answer any additional questions. You can even schedule another demo to see more features in action before making a final decision. It's all about ensuring that you make the best choice for your kitchen!
-                    </p>
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="tex-white mx-auto text-center py-4">
     <section class="footer">
       <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
       <p>
-        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are ready to buy, feel free to get in touch.
+        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are
+        ready to buy, feel free to get in touch.
       </p>
       <p>
         Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
@@ -161,9 +175,9 @@
     </section>
     <!-- Footter links  -->
     <div class="footer-links">
-      <a href="/recipes.html">Recipes</a> | 
-      <a href="/buy.html">Buy Thermomix</a> | 
-      <a href="/demo.html">Book a Demo</a>
+      <a href="index.html">Home</a> |
+      <a href="buy_thermomix.html">Buy Thermomix</a> |
+      <a href="contact.html">Contact</a>
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
